--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -420,10 +420,10 @@
       "output": {
         ".html": {
           "relative_path": "index.html",
-          "hash": "FIH5Fdl7Peuyes4ZBPLYCqO9GPbaLyKRobB7kzFwXJc="
+          "hash": "hyU5uAdDjOtIxhrcI5RNQ2hO00Dj3uWck1p4/ifn4zI="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -452,7 +452,7 @@
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 3,
-          "skipped_file_count": 3
+          "skipped_file_count": 2
         },
         "ManagedReferenceDocumentProcessor": {
           "can_incremental": true,
