--- a/PonzianiComponents/PonzianiComponents.csproj
+++ b/PonzianiComponents/PonzianiComponents.csproj
@@ -20,7 +20,8 @@
     <AssemblyVersion>0.2.4.0</AssemblyVersion>
     <FileVersion>0.2.4.0</FileVersion>
     <PackageReleaseNotes>Code cleanup
-Enhanced ECO classification</PackageReleaseNotes>
+Enhanced ECO classification
+Empty rows in tabular display</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
