--- a/docs/xrefmap.yml
+++ b/docs/xrefmap.yml
@@ -2890,6 +2890,347 @@ references:
   isSpec: "True"
   fullName: PonzianiComponents.Chesslib.TimeControl.TotalAvailableTime
   nameWithType: TimeControl.TotalAvailableTime
+- uid: PonzianiComponents.Engine
+  name: Engine
+  href: api/PonzianiComponents.Engine.html
+  commentId: T:PonzianiComponents.Engine
+  fullName: PonzianiComponents.Engine
+  nameWithType: Engine
+- uid: PonzianiComponents.Engine.EngineMessageAsync(System.String)
+  name: EngineMessageAsync(String)
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_EngineMessageAsync_System_String_
+  commentId: M:PonzianiComponents.Engine.EngineMessageAsync(System.String)
+  fullName: PonzianiComponents.Engine.EngineMessageAsync(System.String)
+  nameWithType: Engine.EngineMessageAsync(String)
+- uid: PonzianiComponents.Engine.EngineMessageAsync*
+  name: EngineMessageAsync
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_EngineMessageAsync_
+  commentId: Overload:PonzianiComponents.Engine.EngineMessageAsync
+  isSpec: "True"
+  fullName: PonzianiComponents.Engine.EngineMessageAsync
+  nameWithType: Engine.EngineMessageAsync
+- uid: PonzianiComponents.Engine.Name
+  name: Name
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_Name
+  commentId: P:PonzianiComponents.Engine.Name
+  fullName: PonzianiComponents.Engine.Name
+  nameWithType: Engine.Name
+- uid: PonzianiComponents.Engine.Name*
+  name: Name
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_Name_
+  commentId: Overload:PonzianiComponents.Engine.Name
+  isSpec: "True"
+  fullName: PonzianiComponents.Engine.Name
+  nameWithType: Engine.Name
+- uid: PonzianiComponents.Engine.NumberOfLines
+  name: NumberOfLines
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_NumberOfLines
+  commentId: P:PonzianiComponents.Engine.NumberOfLines
+  fullName: PonzianiComponents.Engine.NumberOfLines
+  nameWithType: Engine.NumberOfLines
+- uid: PonzianiComponents.Engine.NumberOfLines*
+  name: NumberOfLines
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_NumberOfLines_
+  commentId: Overload:PonzianiComponents.Engine.NumberOfLines
+  isSpec: "True"
+  fullName: PonzianiComponents.Engine.NumberOfLines
+  nameWithType: Engine.NumberOfLines
+- uid: PonzianiComponents.Engine.OnAfterRenderAsync(System.Boolean)
+  name: OnAfterRenderAsync(Boolean)
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_OnAfterRenderAsync_System_Boolean_
+  commentId: M:PonzianiComponents.Engine.OnAfterRenderAsync(System.Boolean)
+  fullName: PonzianiComponents.Engine.OnAfterRenderAsync(System.Boolean)
+  nameWithType: Engine.OnAfterRenderAsync(Boolean)
+- uid: PonzianiComponents.Engine.OnAfterRenderAsync*
+  name: OnAfterRenderAsync
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_OnAfterRenderAsync_
+  commentId: Overload:PonzianiComponents.Engine.OnAfterRenderAsync
+  isSpec: "True"
+  fullName: PonzianiComponents.Engine.OnAfterRenderAsync
+  nameWithType: Engine.OnAfterRenderAsync
+- uid: PonzianiComponents.Engine.OnEngineInfo
+  name: OnEngineInfo
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_OnEngineInfo
+  commentId: P:PonzianiComponents.Engine.OnEngineInfo
+  fullName: PonzianiComponents.Engine.OnEngineInfo
+  nameWithType: Engine.OnEngineInfo
+- uid: PonzianiComponents.Engine.OnEngineInfo*
+  name: OnEngineInfo
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_OnEngineInfo_
+  commentId: Overload:PonzianiComponents.Engine.OnEngineInfo
+  isSpec: "True"
+  fullName: PonzianiComponents.Engine.OnEngineInfo
+  nameWithType: Engine.OnEngineInfo
+- uid: PonzianiComponents.Engine.SendAsync(System.String)
+  name: SendAsync(String)
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_SendAsync_System_String_
+  commentId: M:PonzianiComponents.Engine.SendAsync(System.String)
+  fullName: PonzianiComponents.Engine.SendAsync(System.String)
+  nameWithType: Engine.SendAsync(String)
+- uid: PonzianiComponents.Engine.SendAsync*
+  name: SendAsync
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_SendAsync_
+  commentId: Overload:PonzianiComponents.Engine.SendAsync
+  isSpec: "True"
+  fullName: PonzianiComponents.Engine.SendAsync
+  nameWithType: Engine.SendAsync
+- uid: PonzianiComponents.Engine.ShowLog
+  name: ShowLog
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_ShowLog
+  commentId: P:PonzianiComponents.Engine.ShowLog
+  fullName: PonzianiComponents.Engine.ShowLog
+  nameWithType: Engine.ShowLog
+- uid: PonzianiComponents.Engine.ShowLog*
+  name: ShowLog
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_ShowLog_
+  commentId: Overload:PonzianiComponents.Engine.ShowLog
+  isSpec: "True"
+  fullName: PonzianiComponents.Engine.ShowLog
+  nameWithType: Engine.ShowLog
+- uid: PonzianiComponents.Engine.StartAnalysisAsync(System.String)
+  name: StartAnalysisAsync(String)
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_StartAnalysisAsync_System_String_
+  commentId: M:PonzianiComponents.Engine.StartAnalysisAsync(System.String)
+  fullName: PonzianiComponents.Engine.StartAnalysisAsync(System.String)
+  nameWithType: Engine.StartAnalysisAsync(String)
+- uid: PonzianiComponents.Engine.StartAnalysisAsync*
+  name: StartAnalysisAsync
+  href: api/PonzianiComponents.Engine.html#PonzianiComponents_Engine_StartAnalysisAsync_
+  commentId: Overload:PonzianiComponents.Engine.StartAnalysisAsync
+  isSpec: "True"
+  fullName: PonzianiComponents.Engine.StartAnalysisAsync
+  nameWithType: Engine.StartAnalysisAsync
+- uid: PonzianiComponents.Info
+  name: Info
+  href: api/PonzianiComponents.Info.html
+  commentId: T:PonzianiComponents.Info
+  fullName: PonzianiComponents.Info
+  nameWithType: Info
+- uid: PonzianiComponents.Info.CurrentMove
+  name: CurrentMove
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_CurrentMove
+  commentId: P:PonzianiComponents.Info.CurrentMove
+  fullName: PonzianiComponents.Info.CurrentMove
+  nameWithType: Info.CurrentMove
+- uid: PonzianiComponents.Info.CurrentMove*
+  name: CurrentMove
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_CurrentMove_
+  commentId: Overload:PonzianiComponents.Info.CurrentMove
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.CurrentMove
+  nameWithType: Info.CurrentMove
+- uid: PonzianiComponents.Info.CurrentMoveNumber
+  name: CurrentMoveNumber
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_CurrentMoveNumber
+  commentId: P:PonzianiComponents.Info.CurrentMoveNumber
+  fullName: PonzianiComponents.Info.CurrentMoveNumber
+  nameWithType: Info.CurrentMoveNumber
+- uid: PonzianiComponents.Info.CurrentMoveNumber*
+  name: CurrentMoveNumber
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_CurrentMoveNumber_
+  commentId: Overload:PonzianiComponents.Info.CurrentMoveNumber
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.CurrentMoveNumber
+  nameWithType: Info.CurrentMoveNumber
+- uid: PonzianiComponents.Info.Depth
+  name: Depth
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Depth
+  commentId: P:PonzianiComponents.Info.Depth
+  fullName: PonzianiComponents.Info.Depth
+  nameWithType: Info.Depth
+- uid: PonzianiComponents.Info.Depth*
+  name: Depth
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Depth_
+  commentId: Overload:PonzianiComponents.Info.Depth
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.Depth
+  nameWithType: Info.Depth
+- uid: PonzianiComponents.Info.Evaluation
+  name: Evaluation
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Evaluation
+  commentId: P:PonzianiComponents.Info.Evaluation
+  fullName: PonzianiComponents.Info.Evaluation
+  nameWithType: Info.Evaluation
+- uid: PonzianiComponents.Info.Evaluation*
+  name: Evaluation
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Evaluation_
+  commentId: Overload:PonzianiComponents.Info.Evaluation
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.Evaluation
+  nameWithType: Info.Evaluation
+- uid: PonzianiComponents.Info.EvaluationType
+  name: Info.EvaluationType
+  href: api/PonzianiComponents.Info.EvaluationType.html
+  commentId: T:PonzianiComponents.Info.EvaluationType
+  fullName: PonzianiComponents.Info.EvaluationType
+  nameWithType: Info.EvaluationType
+- uid: PonzianiComponents.Info.EvaluationType.Exact
+  name: Exact
+  href: api/PonzianiComponents.Info.EvaluationType.html#PonzianiComponents_Info_EvaluationType_Exact
+  commentId: F:PonzianiComponents.Info.EvaluationType.Exact
+  fullName: PonzianiComponents.Info.EvaluationType.Exact
+  nameWithType: Info.EvaluationType.Exact
+- uid: PonzianiComponents.Info.EvaluationType.Lowerbound
+  name: Lowerbound
+  href: api/PonzianiComponents.Info.EvaluationType.html#PonzianiComponents_Info_EvaluationType_Lowerbound
+  commentId: F:PonzianiComponents.Info.EvaluationType.Lowerbound
+  fullName: PonzianiComponents.Info.EvaluationType.Lowerbound
+  nameWithType: Info.EvaluationType.Lowerbound
+- uid: PonzianiComponents.Info.EvaluationType.Mate
+  name: Mate
+  href: api/PonzianiComponents.Info.EvaluationType.html#PonzianiComponents_Info_EvaluationType_Mate
+  commentId: F:PonzianiComponents.Info.EvaluationType.Mate
+  fullName: PonzianiComponents.Info.EvaluationType.Mate
+  nameWithType: Info.EvaluationType.Mate
+- uid: PonzianiComponents.Info.EvaluationType.Upperbound
+  name: Upperbound
+  href: api/PonzianiComponents.Info.EvaluationType.html#PonzianiComponents_Info_EvaluationType_Upperbound
+  commentId: F:PonzianiComponents.Info.EvaluationType.Upperbound
+  fullName: PonzianiComponents.Info.EvaluationType.Upperbound
+  nameWithType: Info.EvaluationType.Upperbound
+- uid: PonzianiComponents.Info.Index(System.String)
+  name: Index(String)
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Index_System_String_
+  commentId: M:PonzianiComponents.Info.Index(System.String)
+  fullName: PonzianiComponents.Info.Index(System.String)
+  nameWithType: Info.Index(String)
+- uid: PonzianiComponents.Info.Index*
+  name: Index
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Index_
+  commentId: Overload:PonzianiComponents.Info.Index
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.Index
+  nameWithType: Info.Index
+- uid: PonzianiComponents.Info.MateDistance
+  name: MateDistance
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_MateDistance
+  commentId: P:PonzianiComponents.Info.MateDistance
+  fullName: PonzianiComponents.Info.MateDistance
+  nameWithType: Info.MateDistance
+- uid: PonzianiComponents.Info.MateDistance*
+  name: MateDistance
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_MateDistance_
+  commentId: Overload:PonzianiComponents.Info.MateDistance
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.MateDistance
+  nameWithType: Info.MateDistance
+- uid: PonzianiComponents.Info.MaxDepth
+  name: MaxDepth
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_MaxDepth
+  commentId: P:PonzianiComponents.Info.MaxDepth
+  fullName: PonzianiComponents.Info.MaxDepth
+  nameWithType: Info.MaxDepth
+- uid: PonzianiComponents.Info.MaxDepth*
+  name: MaxDepth
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_MaxDepth_
+  commentId: Overload:PonzianiComponents.Info.MaxDepth
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.MaxDepth
+  nameWithType: Info.MaxDepth
+- uid: PonzianiComponents.Info.MoveIndex
+  name: MoveIndex
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_MoveIndex
+  commentId: P:PonzianiComponents.Info.MoveIndex
+  fullName: PonzianiComponents.Info.MoveIndex
+  nameWithType: Info.MoveIndex
+- uid: PonzianiComponents.Info.MoveIndex*
+  name: MoveIndex
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_MoveIndex_
+  commentId: Overload:PonzianiComponents.Info.MoveIndex
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.MoveIndex
+  nameWithType: Info.MoveIndex
+- uid: PonzianiComponents.Info.Nodes
+  name: Nodes
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Nodes
+  commentId: P:PonzianiComponents.Info.Nodes
+  fullName: PonzianiComponents.Info.Nodes
+  nameWithType: Info.Nodes
+- uid: PonzianiComponents.Info.Nodes*
+  name: Nodes
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Nodes_
+  commentId: Overload:PonzianiComponents.Info.Nodes
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.Nodes
+  nameWithType: Info.Nodes
+- uid: PonzianiComponents.Info.NodesPerSecond
+  name: NodesPerSecond
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_NodesPerSecond
+  commentId: P:PonzianiComponents.Info.NodesPerSecond
+  fullName: PonzianiComponents.Info.NodesPerSecond
+  nameWithType: Info.NodesPerSecond
+- uid: PonzianiComponents.Info.NodesPerSecond*
+  name: NodesPerSecond
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_NodesPerSecond_
+  commentId: Overload:PonzianiComponents.Info.NodesPerSecond
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.NodesPerSecond
+  nameWithType: Info.NodesPerSecond
+- uid: PonzianiComponents.Info.PrincipalVariation
+  name: PrincipalVariation
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_PrincipalVariation
+  commentId: P:PonzianiComponents.Info.PrincipalVariation
+  fullName: PonzianiComponents.Info.PrincipalVariation
+  nameWithType: Info.PrincipalVariation
+- uid: PonzianiComponents.Info.PrincipalVariation*
+  name: PrincipalVariation
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_PrincipalVariation_
+  commentId: Overload:PonzianiComponents.Info.PrincipalVariation
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.PrincipalVariation
+  nameWithType: Info.PrincipalVariation
+- uid: PonzianiComponents.Info.TableBaseHits
+  name: TableBaseHits
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_TableBaseHits
+  commentId: P:PonzianiComponents.Info.TableBaseHits
+  fullName: PonzianiComponents.Info.TableBaseHits
+  nameWithType: Info.TableBaseHits
+- uid: PonzianiComponents.Info.TableBaseHits*
+  name: TableBaseHits
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_TableBaseHits_
+  commentId: Overload:PonzianiComponents.Info.TableBaseHits
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.TableBaseHits
+  nameWithType: Info.TableBaseHits
+- uid: PonzianiComponents.Info.Time
+  name: Time
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Time
+  commentId: P:PonzianiComponents.Info.Time
+  fullName: PonzianiComponents.Info.Time
+  nameWithType: Info.Time
+- uid: PonzianiComponents.Info.Time*
+  name: Time
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Time_
+  commentId: Overload:PonzianiComponents.Info.Time
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.Time
+  nameWithType: Info.Time
+- uid: PonzianiComponents.Info.Type
+  name: Type
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Type
+  commentId: P:PonzianiComponents.Info.Type
+  fullName: PonzianiComponents.Info.Type
+  nameWithType: Info.Type
+- uid: PonzianiComponents.Info.Type*
+  name: Type
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Type_
+  commentId: Overload:PonzianiComponents.Info.Type
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.Type
+  nameWithType: Info.Type
+- uid: PonzianiComponents.Info.Update(System.String)
+  name: Update(String)
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Update_System_String_
+  commentId: M:PonzianiComponents.Info.Update(System.String)
+  fullName: PonzianiComponents.Info.Update(System.String)
+  nameWithType: Info.Update(String)
+- uid: PonzianiComponents.Info.Update*
+  name: Update
+  href: api/PonzianiComponents.Info.html#PonzianiComponents_Info_Update_
+  commentId: Overload:PonzianiComponents.Info.Update
+  isSpec: "True"
+  fullName: PonzianiComponents.Info.Update
+  nameWithType: Info.Update
 - uid: PonzianiComponents.MovePlayedInfo
   name: MovePlayedInfo
   href: api/PonzianiComponents.MovePlayedInfo.html
