--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -9,10 +9,10 @@
       "output": {
         ".html": {
           "relative_path": "api/PonzianiComponents.Chessboard.html",
-          "hash": "C+6XQGqMlvMBatqzFEaRh33UX615qqjNof/3zCELTkg="
+          "hash": "k8ImZtXUgN5070AL0yAOaLakwGOU8zQi2vPWK9fP6FE="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -285,10 +285,10 @@
       "output": {
         ".html": {
           "relative_path": "api/PonzianiComponents.Engine.html",
-          "hash": "GCSoyvEisNsx4vA+3jMY6JT5LZzycL+3kwD/urf7YLc="
+          "hash": "I5ANw8e6xe6/JcBVEacvUHxjEXYkPQ3kUyD+hL+XSvk="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -297,7 +297,7 @@
       "output": {
         ".html": {
           "relative_path": "api/PonzianiComponents.Info.EvaluationType.html",
-          "hash": "1044rplb6jq+JgWk37LSgCQvEHNtHim4mHriMLCfNbE="
+          "hash": "Abmwx8QLrkTf+X4hKCIoAgZQbndH4n8OEtJfByL1hhY="
         }
       },
       "is_incremental": true,
@@ -309,7 +309,7 @@
       "output": {
         ".html": {
           "relative_path": "api/PonzianiComponents.Info.html",
-          "hash": "kkaVp1RnBZnPW+Hafq/P0lY3ANwpXuViwGjFMJ+jhbs="
+          "hash": "8zQThnxsYpFOC8Ace7I6L2TwMnJ79hMYAFxd5YHwAok="
         }
       },
       "is_incremental": true,
@@ -324,7 +324,7 @@
           "hash": "in5btgv7lVvcX+F+AgfafV7/O0VJUZdvIXbzZ9z3mys="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -384,7 +384,7 @@
           "hash": "2cnsHwfUL0grHx80EKyiqpfHJ1OBn6dkFGjjD9D+qzE="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -393,10 +393,10 @@
       "output": {
         ".html": {
           "relative_path": "api/PonzianiComponents.html",
-          "hash": "IxgztfXhphxWal0p4qTPk6pxAzAWbHucENXexZ2+Io8="
+          "hash": "dqRjgG+4S3HPGy1jFL7qpPqMtRVVirUftTwblLjuuX4="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -494,7 +494,7 @@
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 33,
-          "skipped_file_count": 33
+          "skipped_file_count": 31
         },
         "TocDocumentProcessor": {
           "can_incremental": false,
